--- a/src/StoreToHeaven/AddCoffin.form
+++ b/src/StoreToHeaven/AddCoffin.form
@@ -6,7 +6,7 @@
       <Color blue="e2" green="ee" red="ee" type="rgb"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[480, 370]"/>
+      <Dimension value="[480, 424]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -37,14 +37,12 @@
                       <Component id="pic_detail" min="-2" pref="157" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
-                      <Component id="deleteListBT" min="-2" pref="93" max="-2" attributes="0"/>
-                      <EmptySpace min="17" pref="17" max="-2" attributes="0"/>
-                      <Component id="addListBT" min="-2" pref="100" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="pic_detailSP" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="170" max="-2" attributes="0"/>
+                      <Component id="addListBT" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -63,12 +61,9 @@
               <Component id="pic_detail" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
               <Component id="pic_detailSP" min="-2" pref="288" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="deleteListBT" min="-2" max="-2" attributes="0"/>
-                  <Component id="addListBT" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="addListBT" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="12" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -123,17 +118,6 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="addListBTMouseClicked"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="deleteListBT">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="TH Sarabun New" size="18" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="- &#xe25;&#xe1a;&#xe23;&#xe32;&#xe22;&#xe01;&#xe32;&#xe23;"/>
-      </Properties>
-      <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="deleteListBTMouseClicked"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="nameproduct">
