--- a/src/StoreToHeaven/EmpLogin.form
+++ b/src/StoreToHeaven/EmpLogin.form
@@ -47,33 +47,36 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="299" y="86" width="-1" height="-1"/>
+          <AbsoluteConstraints x="300" y="60" width="209" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="usernameLB">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="TH Sarabun New" size="36" style="1"/>
+          <Font name="TH Sarabun New" size="36" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="username:"/>
       </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="username :"/>
+      </AccessibilityProperties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="134" y="179" width="-1" height="-1"/>
+          <AbsoluteConstraints x="134" y="179" width="160" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="passwordLB">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="TH Sarabun New" size="36" style="1"/>
+          <Font name="TH Sarabun New" size="36" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="password:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="134" y="277" width="-1" height="-1"/>
+          <AbsoluteConstraints x="134" y="277" width="160" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -101,7 +104,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="550" y="332" width="120" height="-1"/>
+          <AbsoluteConstraints x="550" y="332" width="140" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -129,8 +132,11 @@
     </Component>
     <Component class="javax.swing.JButton" name="toUserBT">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f2" green="f2" red="f2" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="TH SarabunIT&#xe59;" size="20" style="1"/>
+          <Font name="TH Sarabun New" size="24" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="switch to user login"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -142,7 +148,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="17" y="549" width="150" height="40"/>
+          <AbsoluteConstraints x="17" y="549" width="170" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
