--- a/src/ToHeaven/MainFrame.form
+++ b/src/ToHeaven/MainFrame.form
@@ -64,7 +64,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="590" y="0" width="100" height="100"/>
+              <AbsoluteConstraints x="700" y="0" width="100" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -89,7 +89,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="480" y="0" width="100" height="100"/>
+              <AbsoluteConstraints x="590" y="0" width="100" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -114,7 +114,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="360" y="0" width="110" height="100"/>
+              <AbsoluteConstraints x="470" y="0" width="110" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -139,7 +139,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="240" y="0" width="110" height="100"/>
+              <AbsoluteConstraints x="350" y="0" width="110" height="100"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -159,31 +159,6 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JToggleButton" name="cartBT">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="d7" green="e4" red="c8" type="rgb"/>
-            </Property>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="TH Sarabun New" size="24" style="1"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="33" red="66" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="&#xe15;&#xe30;&#xe01;&#xe23;&#xe49;&#xe32;"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="null"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cartBTMouseClicked"/>
-          </Events>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="700" y="0" width="100" height="100"/>
-            </Constraint>
-          </Constraints>
-        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="frameJP">
@@ -193,7 +168,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;OfferingProductPage ofp = new OfferingProductPage(frameJP);&#xa;CoffinProductPage cofpp = new CoffinProductPage(frameJP);&#xa;CandleProductPage canpp = new CandleProductPage(frameJP);&#xa;IncenseProductPage inpp = new IncenseProductPage(frameJP);&#xa;SnackBoxProductPage snackpp = new SnackBoxProductPage(frameJP);&#xa;SouvenirProductPage soupp = new SouvenirProductPage(frameJP);&#xa;SandalWoodProductPage sandpp = new SandalWoodProductPage(frameJP);&#xa;FrameProductPage framepp = new FrameProductPage(frameJP);&#xa;&#xa;CustomCoffin coffincustom = new CustomCoffin(frameJP);&#xa;CustomFuneral funeral = new CustomFuneral(frameJP);&#xa;CustomAsh ash = new CustomAsh(frameJP);&#xa;PackagePage packagepage = new PackagePage(frameJP);&#xa;Temple_select temS = new Temple_select(frameJP);&#xa;ProductInCart cart = new ProductInCart(frameJP);&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;productpage&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(ofp, &quot;offeringproductpage&quot;);&#xa;frameJP.add(cofpp, &quot;coffinproductpage&quot;);&#xa;frameJP.add(canpp ,&quot;candleproductpage&quot;);&#xa;frameJP.add(inpp, &quot;incenseproductpage&quot;);&#xa;frameJP.add(snackpp, &quot;snackboxproductpage&quot;);&#xa;frameJP.add(soupp, &quot;souvenirproductpage&quot;);&#xa;frameJP.add(sandpp, &quot;sandalwoodproductpage&quot;);&#xa;frameJP.add(framepp, &quot;frameproductpage&quot;);&#xa;&#xa;frameJP.add(coffincustom, &quot;coffincustom&quot;);&#xa;frameJP.add(funeral, &quot;funeral&quot;);&#xa;frameJP.add(ash, &quot;ash&quot;);&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;frameJP.add(temS, &quot;templeSelect&quot;);&#xa;frameJP.add(cart , &quot;cartPage&quot;);&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;OfferingProductPage ofp = new OfferingProductPage(frameJP);&#xa;CoffinProductPage cofpp = new CoffinProductPage(frameJP);&#xa;CandleProductPage canpp = new CandleProductPage(frameJP);&#xa;IncenseProductPage inpp = new IncenseProductPage(frameJP);&#xa;SnackBoxProductPage snackpp = new SnackBoxProductPage(frameJP);&#xa;SouvenirProductPage soupp = new SouvenirProductPage(frameJP);&#xa;SandalWoodProductPage sandpp = new SandalWoodProductPage(frameJP);&#xa;FrameProductPage framepp = new FrameProductPage(frameJP);&#xa;&#xa;PackagePage packagepage = new PackagePage(frameJP);&#xa;Temple_select temS = new Temple_select(frameJP);&#xa;ProductInCart cart = new ProductInCart(frameJP);&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;productpage&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(ofp, &quot;offeringproductpage&quot;);&#xa;frameJP.add(cofpp, &quot;coffinproductpage&quot;);&#xa;frameJP.add(canpp ,&quot;candleproductpage&quot;);&#xa;frameJP.add(inpp, &quot;incenseproductpage&quot;);&#xa;frameJP.add(snackpp, &quot;snackboxproductpage&quot;);&#xa;frameJP.add(soupp, &quot;souvenirproductpage&quot;);&#xa;frameJP.add(sandpp, &quot;sandalwoodproductpage&quot;);&#xa;frameJP.add(framepp, &quot;frameproductpage&quot;);&#xa;&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;frameJP.add(temS, &quot;templeSelect&quot;);&#xa;frameJP.add(cart , &quot;cartPage&quot;);&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
